# openchain

./: .gitignore  README.md  hello.py  langgraph.json  pyproject.toml
deeplyagentic/: __init__.py  api.py  core.py  main.py  studio.py
deeplyagentic/subagents/: __init__.py  purchase_specialist.py  refund_specialist.py  tools.py
deeplyagentic/tools/: outreach.py  sales.py
riffdesk/: chinook.db  main.py
