[project]
name = "openchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.11",
    "fastapi>=0.139.0",
    "langgraph>=1.2.6",
    "pydantic[email]>=2.13.4",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.51.0",
]
